[package]
name = "pixglyph"
version = "0.3.0"
authors = ["Laurenz <laurmaedje@gmail.com>"]
edition = "2021"
description = "Font-rendering with subpixel positioning."
repository = "https://github.com/typst/pixglyph"
readme = "README.md"
license = "Apache-2.0"
categories = ["rendering"]
keywords = ["rendering", "font"]
exclude = ["fonts/*"]

[dependencies]
ttf-parser = "0.21"

[dev-dependencies]
iai = { git = "https://github.com/reknih/iai" }

[[bench]]
name = "oneshot"
path = "benches/oneshot.rs"
harness = false
